tests/paczka1/fuzzy1/49929654.err
Error in line 15: tNjs S528 30,7
Error in line 22: EYa8wgL S455 149,5
Error in line 39: MHx3rv S103 82,7
